# mkproj

./: CMakeLists.txt  README.md  main.cpp
example_templates/: CMakeLists.txt  gitignore  tasks.json
